<resources>
    <string name="app_name">VendorAlpha</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Uday</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">Search History</string>
    <string name="menu_bookmark">Bookmark List</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_history_title">All History</string>
    <string name="menu_orders">Your Orders</string>
    <string name="menu_refer">Refer</string>
    <string name="menu_support">Support</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_free">Free Credits</string>
    <string name="menu_tou">Terms &amp; Conditions</string>
    <string name="sign_in">Enter phone number to continue</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="password_hint">OTP</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="sign_in_text">Sign In</string>
    <string name="btn_ver_otp">Verify OTP</string>
    <string name="create_acc_text">Create Account</string>
    <string name="point_camera_at_gstin_to_scan">point camera at GSTIN to scan</string>
    <string name="enter_or_scan_gstin">Enter or Scan GSTIN</string>
    <string name="gst_filing_details">GST Filing Details</string>
    <string name="eligible_to_collect">Eligible to collect</string>
    <string name="lat_fin">Latest Financials:</string>
    <string name="name">Name</string>
    <string name="location">Location:</string>
    <string name="cin">CIN:</string>
    <string name="dirlist">Director &amp; Signatory List</string>
    <string name="pot_rel_party">Potential Related Party</string>
    <string name="updated_on">Updated on:</string>
    <string name="gstr_1">GSTR-1</string>
    <string name="gstr_3b">GSTR 3B</string>
    <string name="paid_up_capital">Paid up capital:</string>
    <string name="city_state">City(State):</string>
    <string name="website">Website:</string>
    <string name="revenue_range">Revenue Range:</string>
    <string name="pan">PAN:</string>
    <string name="ok">Ok</string>
    <string name="info">Info</string>
    <string name="constitution">Constitution:</string>
    <string name="filing_details">Filing Details</string>
    <string name="info_msg">This is determined by the nature of registration and the status. The following taxpayers can collect taxes on outward supplies made by them \n\n-Regular \n-SEZ \n-Non-resident taxable person \n-Person supplying online information and database access \n\nTaxpayers whose status is Active, can collect taxers. \n\nWhere the above conditions are not satisfied, the taxpayers are classified as ineligible.</string>
    <string name="filing_period">Filing Period</string>
    <string name="gst_1">GST 1</string>
    <string name="gst_3">GST 3</string>
    <string name="month">Month</string>
    <string name="show_profile">Show Profile</string>
    <string name="empty_list">No se encontró museos</string>
    <string name="an_error_occurred">Ocurrió un error</string>
    <string name="list_empty_search">No search history found</string>
    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="logout_pos">Log Out</string>
    <string name="logout_neg">Cancel</string>

    <string name="type_gstin_hint">Type GSTIN in search box or\nClick the camera icon and scan the GSTIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookmark_list">Bookmark</string>
    <string name="history_list">History</string>
    <string name="gst_filing_status">GST Filing Status:</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="plz_wait">Please wait...</string>
    <string name="fetching_data">Fetching data..</string>
    <string name="bookmarked_on">Bookmarked on:</string>
    <string name="searched_on">Searched on:</string>
    <string name="gstin">GSTIN:</string>


    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="bookmark">Bookmark</string>
    <string name="boomarked_text">Bookmarked</string>
    <string name="bookmark_msg">Bookmark</string>
    <string name="already_bookmarked">Already Bookmarked</string>
    <string name="item_bookmarked">Item bookmarked</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="worried_about">Worried about GST Credit Issue?</string>
    <string name="verify_gstin">Verify GSTIN &amp; Filing Status\nbefore making payment</string>
    <string name="press_again">Press back again to exit</string>
    <string name="no_internet_msg">No Internet connection, check your settings</string>
    <string name="no_data_msg">No data yet</string>
    <string name="gstin_hint">Enter GSTIN</string>
    <string name="proceed">Proceed</string>
    <string name="retry">Retry</string>
    <string name="confirm_gst_title">GSTIN number : </string>
    <string name="powered_by">Powered by</string>
    <string name="na">NA</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_gallery">History</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>

    <string name="menu_n_verify">Verify GSTIN</string>
    <string name="menu_n_history">History</string>
    <string name="menu_n_bookmarks">Bookmarks</string>
    <string name="menu_n_refer">Refer &amp; Earn Free Credits</string>
    <string name="menu_n_credits">Your Credits</string>
    <string name="menu_n_kyc">KYC Report</string>
    <string name="menu_n_fin">Financial Report</string>
    <string name="menu_n_help">Help</string>
    <string name="menu_n_tou">Terms of Use</string>
    <string name="menu_n_contact">Contact Us</string>

    <string name="menu_s_rate">Rate Us</string>
    <string name="menu_s_report">Report Bug</string>
    <string name="menu_s_feedback">Feedback</string>
    <string name="menu_s_help">Help</string>
    <string name="menu_s_refer">Refer &amp; Earn</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log In</string>

</resources>
