<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home1">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.instafinancials.vendoralpha.ui.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />
    <action
        android:id="@+id/action_home_to_profile_home"
        app:destination="@+id/nav_profile_home"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/nav_home"
        app:popUpToInclusive="false" />
    <action
        android:id="@+id/action_home_to_scan"
        app:destination="@+id/nav_cam"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/nav_home"
        app:popUpToInclusive="false" />

    <fragment
        android:id="@+id/nav_home1"
        android:name="com.instafinancials.vendoralpha.ui.fragments.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main" />

    <activity
        android:id="@+id/nav_login"
        android:name="com.instafinancials.vendoralpha.ui.activities.LoginActivity"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.instafinancials.vendoralpha.ui.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_home_only"
            app:destination="@+id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.instafinancials.vendoralpha.ui.fragments.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history">

        <action
            android:id="@+id/action_history_home"
            app:destination="@+id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />


        <action
            android:id="@+id/action_history_home_only"
            app:destination="@+id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/nav_bookmark"
        android:name="com.instafinancials.vendoralpha.ui.fragments.BookmarkFragment"
        android:label="@string/menu_bookmark"
        tools:layout="@layout/fragment_bookmark">

        <action
            android:id="@+id/action_book_home"
            app:destination="@+id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />


        <action
            android:id="@+id/action_book_home_only"
            app:destination="@+id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.instafinancials.vendoralpha.ui.fragments.OrderFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_refer"
        android:name="com.instafinancials.vendoralpha.ui.fragments.SendFragment"
        android:label="@string/menu_refer"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_support"
        android:name="com.instafinancials.vendoralpha.ui.fragments.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support">
        <action
            android:id="@+id/action_support_profilehome"
            app:destination="@+id/nav_profile_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.instafinancials.vendoralpha.ui.fragments.SendFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_freecredits"
        android:name="com.instafinancials.vendoralpha.ui.fragments.ShareFragment"
        android:label="@string/menu_free"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_tou"
        android:name="com.instafinancials.vendoralpha.ui.fragments.TermsOfUseFragment"
        android:label="@string/menu_tou"
        tools:layout="@layout/fragment_terms_of_use">
        <action
            android:id="@+id/action_tou_profilehome"
            app:destination="@+id/nav_profile_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile_home"
        android:name="com.instafinancials.vendoralpha.ui.fragments.ProfileHomeFragment"
        tools:layout="@layout/profile_home_fragment">

        <action
            android:id="@+id/action_prof_prof"
            app:destination="@+id/nav_profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_prof_history"
            app:destination="@+id/nav_history"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_prof_book"
            app:destination="@+id/nav_bookmark"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_prof_orders"
            app:destination="@+id/nav_orders"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_prof_refer"
            app:destination="@+id/nav_refer"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_prof_support"
            app:destination="@+id/nav_support"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_prof_feedback"
            app:destination="@+id/nav_feedback"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_prof_free"
            app:destination="@+id/nav_freecredits"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_prof_terms"
            app:destination="@+id/nav_tou"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_prof_login"
            app:destination="@+id/nav_login"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="false" />
    </fragment>

    <activity
        android:id="@+id/nav_cam"
        android:name="com.instafinancials.vendoralpha.ui.activities.camera.CameraActivity"
        tools:layout="@layout/activity_camera" />

    <fragment
        android:id="@+id/nav_gst"
        android:name="com.instafinancials.vendoralpha.ui.fragments.GstTrackerFragment"
        tools:layout="@layout/gsttracker_fragment">

        <action
            android:id="@+id/action_gsttracker_home"
            app:destination="@+id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

    </fragment>

</navigation>